--- a/config.toml
+++ b/config.toml
@@ -8,8 +8,8 @@ pygmentsCodeFences = true
 pygmentsCodefencesGuessSyntax = true
 #pygmentsUseClassic = true
 #pygmentOptions = "linenos=inline"
-#disqusShortname = "XXX"
-#googleAnalytics = "XXX"
+disqusShortname = "blog-tonychoucc-com"
+googleAnalytics = "UA-128885517-3"
 
 [Params]
  homeTitle = "半路出家的軟體人" # Set a different text for the header on the home page
