--- a/buildspec.yml
+++ b/buildspec.yml
@@ -2,23 +2,23 @@ version: 0.2
 
 phases:
   install: 
+    runtime-versions:
+      python: 3
     commands:
-      - docker --version
-      - docker pull klakegg/hugo:ci
-      # - npm i npm@latest -g
-  #     - pip install --upgrade pip
-  #     - pip install --upgrade awscli
-  # docker pull klakegg/hugo:ci
+      - echo "------ Installing hugo ------"
+      - curl -L -o hugo.deb https://github.com/gohugoio/hugo/releases/download/v0.110.0/hugo_0.110.0_linux-amd64.deb
+      - dpkg -i hugo.deb
+      - echo "============================="
   pre_build:
     commands:
-      # - docker run -it --rm -v "$(pwd)/blog2:/src/" klakegg/hugo:ci sh
+      - echo "Current directory is $CODEBUILD_SRC_DIR"
+      - ls -la
+      - echo "============================="
   build:
     commands:
-      # - hugo
-      - docker run -it --rm -v "$(pwd)/blog:/src/" klakegg/hugo:ci hugo
-  post_build:
-    commands:
-      - echo "---- public/ ----"
-      - ls public
-      - echo "================="
-      - aws s3 sync ./public $S3_BUCKET 
+      - hugo -v
+      - echo "============================="
+artifacts:
+  files:
+    - "**/*"
+  base-directory: public
