--- a/buildspec.yml
+++ b/buildspec.yml
@@ -1,23 +1,12 @@
 version: 0.2
 
 phases:
-  install: 
-    runtime-versions:
-      python: 3.9
-    commands:
-      - echo "------ Installing hugo ------"
-      - curl -L -o hugo.deb https://github.com/gohugoio/hugo/releases/download/v0.110.0/hugo_0.110.0_linux-amd64.deb
-      - dpkg -i hugo.deb
-      - echo "============================="
-  pre_build:
-    commands:
-      - echo "Current directory is $CODEBUILD_SRC_DIR"
-      - ls -la
-      - echo "============================="
   build:
     commands:
+      - echo "-----------------"
       - hugo -v
-      - echo "============================="
+      - ls -alh
+      - echo "================="
 artifacts:
   files:
     - "**/*"
