--- a/buildspec.yml
+++ b/buildspec.yml
@@ -1,6 +1,12 @@
 version: 0.2
 
 phases:
+  pre_build:
+    commands:
+      - echo "-----------------"
+      - git submodule init
+      - git submodule update --recursive
+      - echo "================="
   build:
     commands:
       - echo "-----------------"
