--- a/buildspec.yml
+++ b/buildspec.yml
@@ -1,8 +1,14 @@
-# 缺少 git 解決不了 submodule 問題...
-# 如果找到 git binary for `klakegg/hugo:ci:ui` 應該有解
 version: 0.2
 
 phases:
+  install: 
+    runtime-versions:
+      python: 3
+    commands:
+      - echo "------ Installing hugo ------"
+      - curl -L -o hugo.deb https://github.com/gohugoio/hugo/releases/download/v0.110.0/hugo_0.110.0_linux-amd64.deb
+      - dpkg -i hugo.deb
+      - echo "============================="
   pre_build:
     commands:
       - echo "-----------------"
