--- a/buildspec.yml
+++ b/buildspec.yml
@@ -8,19 +8,15 @@ phases:
       - echo "------ Installing hugo ------"
       - curl -L -o hugo.deb https://github.com/gohugoio/hugo/releases/download/v0.110.0/hugo_0.110.0_linux-amd64.deb
       - dpkg -i hugo.deb
-      - echo "============================="
   pre_build:
     commands:
-      - echo "-----------------"
-      - git submodule init
-      - git submodule update --recursive
-      - echo "================="
+      - echo "In pre_build phase.."
+      - echo "Current directory is $CODEBUILD_SRC_DIR"
   build:
     commands:
       - echo "-----------------"
       - hugo -v
       - ls -alh
-      - echo "================="
 artifacts:
   files:
     - "**/*"
