--- a/buildspec.yml
+++ b/buildspec.yml
@@ -1,10 +1,17 @@
 version: 0.2
 
 phases:
+  install: 
+    runtime-versions:
+      python: 3.9
+    commands:
+      - echo "------ Installing hugo ------"
+      - curl -L -o hugo.deb https://github.com/gohugoio/hugo/releases/download/v0.110.0/hugo_0.110.0_linux-amd64.deb
+      - dpkg -i hugo.deb
   pre_build:
     commands:
       - echo "In pre_build phase.."
-      - echo "Current directory is $CODEBUILD_SRC_DIR"
+      - echo "Current directory is ${CODEBUILD_SRC_DIR}"
   build:
     commands:
       - echo "-----------------"
