--- a/buildspec.yml
+++ b/buildspec.yml
@@ -10,6 +10,10 @@ phases:
       - dpkg -i hugo.deb
   pre_build:
     commands:
+      - echo "--- submodules ------------"
+      - git submodule init
+      - git submodule update --recursive
+      - echo "==========================="
       - echo "In pre_build phase.."
       - echo "Current directory is ${CODEBUILD_SRC_DIR}"
   build:
