--- a/config.toml
+++ b/config.toml
@@ -49,7 +49,7 @@ googleAnalytics = "UA-128885517-3"
   name = "Tony Chou"
 #   website = "yourwebsite.com"
   email = "cool21540125@gmail.com"
-#   facebook = "cool21540125"
+  facebook = "cool21540125"
   github = "cool21540125"
   gitlab = "cool21540125"
 #   bitbucket = "username"
