--- a/config.toml
+++ b/config.toml
@@ -83,9 +83,26 @@ googleAnalytics = "UA-128885517-3"
     weight = 1
 
 [[menu.main]]
+    identifier = "misc"
+    name = "Misc"
+    weight = 3
+
+[[menu.main]]
     name = "About"
     url = "page/about/"
     weight = 3
+
+[[menu.main]]
+    parent = "misc"
+    name = "Nightmare"
+    url = "page/nightmare2022/"
+    weight = 4
+
+# [[menu.main]]
+#     parent = "misc"
+#     name = "Example"
+#     url = "page/nightmare2023/"
+#     weight = 3
 
 # [[menu.main]]
 #     identifier = "samples"
