--- a/config.toml
+++ b/config.toml
@@ -1,4 +1,4 @@
-baseurl = "https://uat-blog.tonychoucc.com"
+baseurl = "https://blog.tonychoucc.com"
 DefaultContentLanguage = "en"
 title = "朝向 SRE 邁進中"
 theme = "beautifulhugo"
