--- a/buildspec.yml
+++ b/buildspec.yml
@@ -16,6 +16,9 @@ phases:
       - echo "==========================="
       - echo "In pre_build phase.."
       - echo "Current directory is ${CODEBUILD_SRC_DIR}"
+      - echo "****** prd URL ******"
+      - echo "$(head -n 1 config.toml)"
+      - echo "==========================="
   build:
     commands:
       - echo "-----------------"
