[config] change index for UAT

--- a/buildspec.yml
+++ b/buildspec.yml
@@ -15,6 +15,7 @@ phases:
       - git submodule update --recursive
       - echo "==========================="
       - echo "In pre_build phase.."
+      - echo "# This is uat" > content/_index.md
       - echo "Current directory is ${CODEBUILD_SRC_DIR}"
       - echo "****** uat URL ******"
       - sed -i 's/blog/uat-blog/' config.toml
