--- a/config.toml
+++ b/config.toml
@@ -6,6 +6,7 @@ pygmentsStyle = "trac"
 pygmentsUseClasses = true
 pygmentsCodeFences = true
 pygmentsCodefencesGuessSyntax = true
+uglyurls = true
 #pygmentsUseClassic = true
 #pygmentOptions = "linenos=inline"
 # disqusShortname = "blog-tonychoucc-com"
