--- a/config.toml
+++ b/config.toml
@@ -13,23 +13,23 @@ disqusShortname = "blog-tonychoucc-com"
 googleAnalytics = "UA-128885517-3"
 
 [Params]
-  # homeTitle = "朝向 SRE 邁進中123" # Set a different text for the header on the home page
-  # subtitle = "Blog 荒廢了 2 年有了. Since 2023/02, 會不定期開始加東西"
-  mainSections = ["post","posts"]
-  logo = "images/virus.jpeg"
-  # logo = "img/avatar-icon.png" # Expecting square dimensions
-  favicon = "images/favicon.ico"
-  # favicon = "img/favicon.ico"
-  dateFormat = "January 2, 2006"
-  commit = false
-  rss = true
-  comments = true
-  readingTime = true
-  wordCount = true
-  useHLJS = true
-  socialShare = true
-  delayDisqus = true
-  showRelatedPosts = true
+# homeTitle = "朝向 SRE 邁進中123" # Set a different text for the header on the home page
+# subtitle = "Blog 荒廢了 2 年有了. Since 2023/02, 會不定期開始加東西"
+mainSections = ["post", "posts"]
+logo = "images/virus.jpeg"
+# logo = "img/avatar-icon.png" # Expecting square dimensions
+favicon = "images/favicon.ico"
+# favicon = "img/favicon.ico"
+dateFormat = "January 2, 2006"
+commit = false
+rss = true
+comments = true
+readingTime = true
+wordCount = true
+useHLJS = true
+socialShare = true
+delayDisqus = true
+showRelatedPosts = true
 #  hideAuthor = true
 #  gcse = "012345678901234567890:abcdefghijk" # Get your code from google.com/cse. Make sure to go to "Look and Feel" and change Layout to "Full Width" and Theme to "Classic"
 
@@ -46,22 +46,20 @@ googleAnalytics = "UA-128885517-3"
 #  desc = "Hexagon"
 
 [Author]
-  # Set only your "username" for default hosts and full URLs otherwise (e.g., "https://MyGitLab.org/username")
-  name = "Tony Chou"
+# Set only your "username" for default hosts and full URLs otherwise (e.g., "https://MyGitLab.org/username")
 #   website = "yourwebsite.com"
-  email = "cool21540125@gmail.com"
-  facebook = "cool21540125"
-  github = "cool21540125"
-  gitlab = "cool21540125"
+facebook = "cool21540125"
+github = "cool21540125"
+gitlab = "cool21540125"
 #   bitbucket = "username"
 #   twitter = "username"
 #   reddit = "username"
 #   linkedin = "username"
 #   xing = "username"
-  stackoverflow = "users/7751061/tony-chou"
+stackoverflow = "users/7751061/tony-chou"
 #   snapchat = "username"
 #   instagram = "username"
-  # youtube = "user/username" # or channel/channelname
+# youtube = "user/username" # or channel/channelname
 #   soundcloud = "username"
 #   spotify = "username"
 #   bandcamp = "username"
@@ -78,31 +76,35 @@ googleAnalytics = "UA-128885517-3"
 #   discord = "invite code (https://discord.gg/XXXXXXX)"
 #   strava = "userid"
 
-[[menu.main]]
-    name = "Blog"
-    url = ""
-    weight = 1
+[[params.author]]
+name = "Tony Chou"
+email = "cool21540125@gmail.com"
 
 [[menu.main]]
-    identifier = "misc"
-    name = "Misc"
-    weight = 3
+name = "Blog"
+url = ""
+weight = 1
 
 [[menu.main]]
-    name = "About"
-    url = "/page/about.html"
-    weight = 3
+identifier = "misc"
+name = "Misc"
+weight = 3
 
 [[menu.main]]
-    parent = "misc"
-    name = "Nightmare"
-    url = "/page/nightmare2022.html"
-    weight = 4
+name = "About"
+url = "/page/about.html"
+weight = 3
 
 [[menu.main]]
-    name = "Tags"
-    url = "tags.html"
-    weight = 5
+parent = "misc"
+name = "Nightmare"
+url = "/page/nightmare2022.html"
+weight = 4
+
+[[menu.main]]
+name = "Tags"
+url = "tags.html"
+weight = 5
 
 # [[menu.main]]
 #     parent = "misc"
@@ -112,6 +114,6 @@ googleAnalytics = "UA-128885517-3"
 
 
 [markup]
-  [markup.goldmark]
-    [markup.goldmark.renderer]
-      unsafe = true  # 可以渲染 HTML tag
+[markup.goldmark]
+[markup.goldmark.renderer]
+unsafe = true # 可以渲染 HTML tag
