--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -4,6 +4,7 @@ on:
   push:
     branches:
       - uat
+      - main
 
 jobs:
   deploy:
@@ -32,7 +33,7 @@ jobs:
             echo "" >> content/_index.md
             echo "# This is UAT" >> content/_index.md
 
-          elif [[ "${{ github.ref }}" == "refs/heads/master" ]]; then
+          elif [[ "${{ github.ref }}" == "refs/heads/main" ]]; then
             echo "AWS_DISTRIBUTION_ID=${{ secrets.PRD_AWS_DISTRIBUTION_ID }}" >> "$GITHUB_OUTPUT"
             echo "AWS_ACCOUNT_ID=${{ secrets.PRD_AWS_ACCOUNT_ID }}" >> "$GITHUB_OUTPUT"
             echo "BUCKET_NAME=${{ vars.PRD_AWS_S3_BUCKET_NAME }}" >> "$GITHUB_OUTPUT"
